inserted image, hotlink

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
 	<div class="container-fluid">
-		<div class="row mt-4 d-inline-flex justify-content-center">
-				<h1 class="test">testing...</h1>
+		<div class="row">
+				<h1 class="test text-center">testing...</h1>
+		</div>
+		<div class="row d-flex justify-content center">
+			<img src="https://source.unsplash.com/featured/500x600/?nature" alt="rando">
 		</div>
 
 	</div>
