--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="row">
 				<h1 class="test text-center">testing...</h1>
 		</div>
-		<div class="row d-flex justify-content center">
+		<div class="row" id="image">
 			<img src="https://source.unsplash.com/featured/500x600/?nature" alt="rando">
 		</div>
 
