--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 				<h1 class="test text-center">testing...</h1>
 		</div>
 		<div class="row" id="image">
-			<img src="https://source.unsplash.com/featured/500x600/?nature" alt="rando">
+			<img src="https://source.unsplash.com/featured/?nature" alt="rando">
+			<div id="quote">Test</div>
 		</div>
 
 	</div>
