--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 		<div class="row">
 				<h1 class="test text-center">testing...</h1>
 		</div>
-		<div class="row" id="image">
-			<img src="https://source.unsplash.com/featured/?nature" alt="rando">
-			<div id="quote">Test</div>
+		<div class="row" id="image-row">
+			<div class="image">
+				<img src="https://source.unsplash.com/featured/?nature" alt="rando">
+				<h6 id="quote">Test</h6>
+			</div>
 		</div>
 
 	</div>
