targeting only quote text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<div class="row" id="image-row">
 			<div class="image">
 				<img src="https://source.unsplash.com/featured/?nature" alt="rando">
-				<h6 id="quote">Test</h6>
+				<h6 id="quote"></h6>
+				<h4 id="author"></h4>
 			</div>
 		</div>
 
