changed button text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h4 id="author"></h4>
 			</div>
 		</div>
-		<button type="button" class="btn btn-primary generate">Primary</button>
+		<button type="button" class="btn btn-primary generate">Inspire me</button>
 
 	</div>
 
