removed src from img tag, still need to fix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</div>
 		<div class="row" id="image-row">
 			<div class="image">
-				<img src="https://source.unsplash.com/featured/?nature" alt="rando">
+				<img src="" alt="rando">
 				<h6 id="quote"></h6>
 				<h4 id="author"></h4>
 			</div>
