--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
-				<h1 class="test text-center">testing...</h1>
+				<h1 class="test text-center">Need Inspiration?</h1>
 		</div>
 		<div class="row" id="image-row">
 			<div class="image">
