centered title finally

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<div class="container-fluid">
-		<div class="row">
-				<h1 class="test text-center">Need Inspiration?</h1>
+		<div class="row d-flex justify-content-center">
+				<h1 class="test">Need Inspiration?</h1>
 		</div>
 		<div class="row" id="image-row">
 			<div class="image">
@@ -18,7 +18,7 @@
 				<h4 id="author"></h4>
 			</div>
 		</div>
-		<button type="button" class="btn btn-primary generate">Inspire me</button>
+		<button type="button" class="btn btn-secondary generate">Inspire me</button>
 
 	</div>
 
