--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 				<h4 id="author"></h4>
 			</div>
 		</div>
-		<button type="button" class="btn btn-secondary generate">Inspire me</button>
+		<div class="row d-flex justify-content-center">
+			<button type="button" class="btn btn-secondary generate">Inspire me</button>
+		</div>
 
 	</div>
 
