changed to bootstrap card for more ease

--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
 		<div class="row d-flex justify-content-center">
 				<h1 class="test">Need Inspiration?</h1>
 		</div>
-		<div class="row" id="image-row">
-			<div class="image">
-				<img src="" alt="rando">
+		<!-- Card -->
+		<div class="card" style="max-width: 20rem;">
+
+			<!-- Card image -->
+			<img class="card-img-top image" src="" alt="Card image cap">
+
+			<!-- Card content -->
+			<div class="card-body p-2">
 				<h6 id="quote"></h6>
 				<h4 id="author"></h4>
 			</div>
+
 		</div>
+		<!-- Card -->
+
 		<div class="row d-flex justify-content-center">
 			<button type="button" class="btn btn-secondary generate">Inspire me</button>
 		</div>
