--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
 		<div class="row d-flex justify-content-center">
 				<h1 class="test">Need Inspiration?</h1>
 		</div>
-		<!-- Card -->
-		<div class="card" style="max-width: 20rem;">
+			<div class="row d-flex justify-content-center">
+			<!-- Card -->
+			<div class="card" style="max-width: 20rem;">
 
-			<!-- Card image -->
-			<img class="card-img-top image" src="" alt="Card image cap">
+				<!-- Card image -->
+				<img class="card-img-top image" src="" alt="Card image cap">
 
-			<!-- Card content -->
-			<div class="card-body p-2">
-				<h6 id="quote"></h6>
-				<h4 id="author"></h4>
+				<!-- Card content -->
+				<div class="card-body text-white rgba-black-strong p-2">
+					<h6 id="quote"></h6>
+					<h4 id="author"></h4>
+				</div>
+
 			</div>
-
+			<!-- Card -->
 		</div>
-		<!-- Card -->
 
 		<div class="row d-flex justify-content-center">
 			<button type="button" class="btn btn-secondary generate">Inspire me</button>
